# study-agent

./: .env.example  .gitignore  DESIGN.md  DESIGN_SUMMARY.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUESTIONS_AND_CLARIFICATIONS.md  README.md  WHATSAPP_INTEGRATION.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ERD.md
docs/implementation/: PRIORITY1_IMPLEMENTATION.md  pahse2-improvements.md
scripts/: init_db.py  query_db.py
src/study_agent/: __init__.py  __main__.py
src/study_agent/application/services/: github_service.py  scheduler_service.py  study_manager.py
src/study_agent/config/: constants.py  settings.py
src/study_agent/core/: exceptions.py  utils.py
src/study_agent/domain/models/: assessment.py  performance.py  repository.py  study_session.py  topic.py  user.py
src/study_agent/infrastructure/clients/: gemini_client.py  github_client.py
src/study_agent/infrastructure/database/: engine.py  models.py
src/study_agent/infrastructure/database/repositories/: __init__.py  assessment_repository.py  performance_metrics_repository.py  topic_repository.py  (+3 more)
src/study_agent/presentation/telegram/: bot.py  states.py
tests/: conftest.py
tests/unit/test_handlers/: test_states.py
tests/unit/test_repositories/: test_assessment_repository.py  test_performance_metrics_repository.py  test_repository_repository.py  test_study_session_repository.py  test_topic_repository.py  test_user_repository.py
tests/unit/test_services/: test_github_service.py  test_scheduler_service.py
tests/unit/test_utils/: test_utils.py
(+1 files in other folders)
